<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.example.restapplication.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/navigation_menus"
            android:name="com.example.restapplication.ui.menus.MenusFragment"
            android:label="@string/title_menus"
            tools:layout="@layout/fragment_menus"/>

    <fragment
            android:id="@+id/navigation_payments"
            android:name="com.example.restapplication.ui.payments.PaymentsFragment"
            android:label="@string/title_payments"
            tools:layout="@layout/fragment_payments"/>

    <fragment
            android:id="@+id/cart_fragment"
            android:name="com.example.restapplication.ui.menus.cart.CartFragment"
            android:label="@string/title_cart"
            tools:layout="@layout/fragment_cart"/>

</navigation>